# mturkish

./: README.md  setup.cfg
src/mturkish/: __init__.py
