[metadata]
name = mturkish
version = 0.0.1
author = Goran Topic
author_email = goran.topic@aist.go.jp
description = A small command-line utility to ease automation of Amazon Mechanical Turk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amadanmath/mturkish
project_urls =
    Bug Tracker = https://github.com/amadanmath/mturkish/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
  mturkish = mturkish:cli

[options.packages.find]
where = src
